# SpatialLinkageCam

./: .gitignore  CMakeLists.txt  README.md
data/0_Demo/figDolphin/Motion/: link0.pmt  link2.pmt
data/0_Demo/heart/Motion/: handle.pmt  link2.pmt
data/0_Demo/maniplator/Motion/: handle.pmt  link0.pmt  link4.pmt
data/0_Demo/tennisCurve/Motion/: link1.pmt  link3.pmt  link4.pmt
data/0_Demo/tripleKnot/Motion/: cam.pmt  link3.pmt
data/0_InputCurves/: curve_2.txt  curve_3_Bezier.txt  curve_4_flower.txt  curve_5_heart.txt
data/0_tmp_data/: cam.pmt  camInfo_2.txt  curve.txt  link0.pmt  link1.pmt  link2.pmt  link3.pmt  link4.pmt  s1.ang  s2.ang  s3.ang  s4.ang  s5.ang  s6.ang  s7.ang  s8.ang  s9.ang  tmpdata1.txt  tmpdata2.txt  tmpdata3.txt  tmpdata4.txt  tmpdata5.txt  tmpdata6.txt  tmpdata7.txt
data/Demo/Dolphin/Motion/: cam.pmt  link1.pmt  link3.pmt  link4.pmt
data/Demo/heart/Motion/: link1.pmt  link3.pmt  link4.pmt
data/Demo/maniplator/Motion/: endFM.pmt  link1.pmt  link3.pmt  objCube.pmt
data/Demo/tennisCurve/Motion/: link0.pmt  pinBall.pmt
data/Demo/tripleKnot/Motion/: endBall.pmt  link1.pmt  link4.pmt
data/InputCurves/: curve_1.txt  curve_6_Mobius.txt  curve_7_sin.txt  curve_8_tennisBall.txt  curve_9_tripleKnot.txt
data/tmp_data/: cam.pmt  camInfo_2.txt  curve.txt  link0.pmt  link1.pmt  link2.pmt  link3.pmt  link4.pmt  s1.ang  s2.ang  s3.ang  s4.ang  s5.ang  s6.ang  s7.ang  s8.ang  s9.ang  tmpdata1.txt  tmpdata2.txt  tmpdata3.txt  tmpdata4.txt  tmpdata7.txt
src/CamLinks/: CamLinksVIsua.cpp  CamLinksVIsua.h
src/CamPart/: Cam.cpp  Cam.h  Cam1R.cpp  Cam1R.h  Cam2R.cpp  Cam2R.h  CamC.cpp  CamC.h  CamP.cpp  CamP.h  Groove.cpp  Groove.h
src/IOfile/: IOMechs.cpp  IOMechs.h  ReadCurve.cpp  ReadCurve.h  ReadMesh.cpp  ReadMesh.h
src/Linkages/: 5barlinksDesign.cpp  5barlinksDesign.h  Joint.cpp  Joint.h
src/MainFunc/: releaseMain.cpp
src/Mesh/: ConVexHull.cpp  ConVexHull.h  Mesh.cpp  Mesh.h  MeshBoolean.cpp  MeshBoolean.h  MeshCreator.cpp  MeshCreator.h  MeshObject.cpp  MeshObject.h
src/Opt/: IKLMeigen.cpp  IKLMeigen.h  LMeigen.cpp  LMeigen.h  PSO_Design.cpp  PSO_Design.h  PSO_PC.cpp  PSO_PC.h
src/Render/: libigl_Render.cpp  libigl_Render.h  libigl_UI.cpp  libigl_UI.h
src/Utility/: HelpDefine.h  HelpFunc.cpp  HelpFunc.h  HelpStruct.h
